corrected some more alignment on the 'about' page

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -84,6 +84,21 @@
             }
     }
 
+    a{
+        font-weight: 900;
+        &:link, &:visited{
+            color: #445544;
+        }
+
+        &:hover {
+            color:#eee;
+        }
+
+        &:active{
+            color: #C0DBC7;    
+        }
+    }
+
     .section{
         display: block; 
         margin: 10px auto; 
@@ -92,6 +107,14 @@
     @media screen and (max-width: 799px){
         h4{
             text-align: center;
+            max-width: 485px; 
+            
+        }
+    }
+
+    @media screen and (max-width: 480px){
+        h4{
+             max-width: 320px; 
         }
     }
 }
